# ConnTextUL_

./: .gitignore  102923.Rmd  ConnTextUL.Rmd  README  README.md  construct_background_vocabulary_SSSR2024.ipynb  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json
Programs/Controlled/Zip Zoom/: 1.01 Sad and Happy.txt  1.02 My Face.txt  1.03 My Feet.txt  1.04 My Hands.txt  1.05 My Dad.txt  1.06 My Mom.txt  1.07 A Happy Room.txt  1.08 A Room for Me.txt  1.09 Dad and the Toy.txt  1.10 The New Toy.txt  1.11 See the Cat and Dog.txt  1.12 The Cat is Up.txt  1.13 Buns.txt  1.14 Jam.txt  1.15 Stop.txt  1.16 Stop and Go.txt  1.17 Mom_s New Pocket.txt  1.18 The Pocket.txt  1.19 In and Out.txt  1.20 The Little Van.txt  1.21 Going to School.txt  1.22 Stop here.txt  1.23 Flags, Flags, Flags.txt  1.24 The Flag.txt  1.25 My Backpack.txt  1.26 Snacks.txt  1.27 Our Class Pet.txt  1.28 Jet.txt  1.29 What is red_.txt  1.30 The Red Book.txt  1.31 Jobs at school.txt  1.32 Classroom Jobs.txt  1.33 Look at the Clock.txt  1.34 Our Clock.txt  1.35 Fun in the Sun.txt  1.36 Run and hop.txt  (+23 more)
data/: fiction_counts.csv
data/vocabulary/: tasa.csv
scripts/: 102923_data.R  coca_sampling.ipynb  combined_programs_tasa_tidy.ipynb  data_pilot.R  global_encoding.R  global_encoding_pilot.R  kidwords_44720_121123.csv  kidwords_probability_sampled.ipynb  kidwords_probability_sampled_120123.csv  length_based_sampling.ipynb  load.R  phon_predictions.R  probabilities.csv  random_sampling.ipynb  requirements.txt  tmp.R  utilities.R
scripts/.ipynb_checkpoints/: main_database-checkpoint.ipynb
(+749 files in other folders)
