[tool.poetry]
name = "ConnTextUL Data Repository"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
chardet = "^5.2.0"
nltk = "^3.8.1"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]
ipykernel = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
